[package]
name = "Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
crossterm = "0.29.0"
dotenv = "0.15.0"
image = "0.25.6"
meval = "0.2.0"
num-complex = "0.4.6"
plotters = "0.3.7"
qrcode = "0.14.1"
quircs = "0.10.2"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
webbrowser = "1.0.5"
